# swift-llbuild

./: .clang-format  .dir-locals.el  .editorconfig  .gitignore  .gitmodules  .mailmap  CMakeLists.txt  CODEOWNERS  CODE_OWNERS.TXT  LICENSE.txt  Makefile  Package.resolved  Package.swift  Package@swift-4.2.swift  README.llbuild3.md  README.md  README.tritium.md  README.txt  Vagrantfile  llbuild.podspec  vcpkg.json
lib/Basic/: CMakeLists.txt  ExecutionQueue.cpp  FileInfo.cpp  FileSystem.cpp  Hashing.cpp  InterruptSignalAwaiter.cpp  LaneBasedExecutionQueue.cpp  LeanWindows.h  PlatformUtility.cpp  RedirectedProcess.cpp  SerialQueue.cpp  ShellUtility.cpp  SignalHandlerWrapper.cpp  Subprocess.cpp  Tracing.cpp  Version.cpp
lib/Basic/include/llbuild/: Basic
lib/BuildSystem/: BuildDescription.cpp  BuildExecutionQueue.cpp  BuildFile.cpp  BuildKey.cpp  BuildNode.cpp  BuildSystem.cpp  BuildSystemExtensionManager.cpp  BuildSystemFrontend.cpp  BuildValue.cpp  CMakeLists.txt  ExternalCommand.cpp  LaneBasedExecutionQueue.cpp  POSIXEnvironment.h  ShellCommand.cpp  SwiftTools.cpp
lib/BuildSystem/include/llbuild/: BuildSystem
lib/Core/: BuildDB.cpp  BuildEngine.cpp  BuildEngineClient.cpp  BuildEngineProtocol.cpp  BuildEngineProtocol.h  BuildEngineServer.cpp  BuildEngineTrace.cpp  BuildEngineTrace.h  CMakeLists.txt  DependencyCommand.cpp  DependencyGraph.cpp  DependencyInfoParser.cpp  DependencyNode.cpp  MakefileDepsParser.cpp  SQLiteBuildDB.cpp
lib/Core/include/llbuild/: Core
lib/llvm/Support/: AArch64TargetParser.cpp  APFloat.cpp  CMakeLists.txt  CommandLine.cpp  Debug.cpp  DebugOptions.h  ErrorHandling.cpp  Host.cpp  Mutex.cpp  Path.cpp  Signals.cpp  SmallPtrSet.cpp  SmallVector.cpp  StringRef.cpp  VirtualFileSystem.cpp  YAMLParser.cpp  raw_ostream.cpp
lib/llvm/Support/Unix/: Process.inc  Program.inc  Signals.inc
lib/llvm/Support/Windows/: Path.inc  Signals.inc
lib/llvm/Support/include/: llvm-c
lib/llvm/Support/include/llvm/: ADT  Config  Support
perftests/Xcode/PerfTests/: BinaryCodingPerfTests.mm  BuildSystemPerfTests.mm  CMakeLists.txt  CorePerfTests.mm  NinjaPerfTests.mm
products/: CMakeLists.txt
products/Tritium/: Errors.hpp  SwiftAdaptors.hpp  Tritium.h  Visibility.hpp
products/build-analysis/: Package.swift  README.md
products/build-analysis/Sources/BuildAnalysis/: main.swift  run.swift
products/build-analysis/Sources/Commands/: Command.swift  CriticalPathTool.swift
products/build-analysis/Sources/Core/: ArgumentsParser.swift
products/build-analysis/Tests/: LinuxMain.swift
products/build-analysis/Tests/CommandsTests/: CriticalPathToolTests.swift  XCTestManifests.swift
products/build-analysis/Tests/CoreTests/: ArgumentsParserTests.swift  XCTestManifests.swift
products/libllbuild/: Basic-C-API.cpp  BuildDB-C-API.cpp  BuildKey-C-API-Private.h  BuildKey-C-API.cpp  BuildSystem-C-API-Private.h  BuildSystem-C-API.cpp  BuildValue-C-API-Private.h  BuildValue-C-API.cpp  C-API.cpp  CMakeLists.txt  Core-C-API.cpp  Ninja-C-API.cpp
products/libllbuild/include/: module.modulemap
products/libllbuild/include/llbuild/: basic.h  buildkey.h  buildsystem.h  buildvalue.h  core.h  db.h  llbuild-defines.h  llbuild.h  ninja.h  version.h  version.h.in
products/libllbuild/public-api/: README.txt
products/libllbuild/public-api/llbuild/: buildsystem.h  core.h  llbuild.h  module.modulemap
products/llbuild/: CMakeLists.txt  llbuild.cpp  main.cpp
products/llbuild-analyze/: ArgumentsParser.swift  Command.swift  OptionParsable.swift  Package.resolved  Package.swift  Run.swift  main.swift
products/llbuild-analyze/Sources/: CriticalPathTool.swift  GraphViz.swift  PathJSONSerialization.swift  Tool.swift  main.swift
products/llbuild-framework/: Info.plist  README.md  llbuild-module.modulemap
products/llbuild3/: Errors.hpp  Result.hpp  SwiftAdaptors.hpp  Visibility.hpp  llbuild3.h
products/llbuildSwift/: BuildDBBindings.swift  BuildKey.swift  BuildSystemBindings.swift  BuildValue.swift  CMakeLists.txt  CoreBindings.swift  Internals.swift  NinjaManifest.swift
products/swift-Ninja/: NinjaManifest.swift  README.md
products/swift-bindings/: CMakeLists.txt  llbuild.swift
products/swift-build-tool/: CMakeLists.txt  main.cpp  swift-build-tool.cpp
products/ui/: .gitignore  README.md  setup.py
products/ui/llbuildui/: __init__.py  app.py  database.py  graphalgorithms.py  model.py  orderedset.py  trace.py  views.py
products/ui/llbuildui/static/: style.css
products/ui/llbuildui/templates/: config.html  db_root.html  db_rule_result.html  diagnostics.html  index.html  layout.html  rule_result.html  trace_config.html  trace_root.html
unittests/Basic/: BinaryCodingTests.cpp  CMakeLists.txt  Defer.cpp  FileSystemTest.cpp  InterruptSignalAwaiterTests.cpp  LaneBasedExecutionQueueTest.cpp  POSIXEnvironmentTest.cpp  SerialQueueTest.cpp  ShellUtilityTest.cpp  TempDir.cpp  TempDir.h
unittests/BuildSystem/: BuildExecutionQueueTest.cpp  BuildSystemFrontendTest.cpp  BuildSystemTaskTests.cpp  BuildValueTest.cpp  CMakeLists.txt  LaneBasedExecutionQueueTest.cpp  MockBuildSystemDelegate.cpp  MockBuildSystemDelegate.h  POSIXEnvironmentTest.cpp  TempDir.cpp  TempDir.h  TempDir.hpp  main.cpp
unittests/BuildSystem/Inputs/BuildExecutionQueueExecuteProcessInputs/: deadlock-if-blocking-io  only-stderr  only-stdout  simple-output
unittests/CAPI/: BuildSystem-C-API.cpp  C-API.cpp  CMakeLists.txt
unittests/Core/: BuildEngineCancellationTest.cpp  BuildEngineServerTest.cpp  BuildEngineTest.cpp  CMakeLists.txt  DependencyGraphTest.cpp  DependencyInfoParserTest.cpp  DepsBuildEngineTest.cpp  MakefileDepsParserTest.cpp  SQLiteBuildDBTest.cpp  main.cpp
utils/adjust-times/: CMakeLists.txt  adjust-times.cpp
utils/unittest/: CMakeLists.txt
utils/unittest/UnitTestMain/: CMakeLists.txt  TestMain.cpp
utils/unittest/googletest/include/gtest/: gtest-death-test.h  gtest-llbuild-config.h  gtest-message.h  gtest-param-test.h  gtest-printers.h  gtest-spi.h  gtest-test-part.h  gtest-typed-test.h  gtest.h  gtest_prod.h
utils/unittest/googletest/src/: gtest-death-test.cc  gtest-port.cc  gtest.cc
(+513 files in other folders)
